--- a/src/assets/css/slick.css
+++ b/src/assets/css/slick.css
@@ -54,20 +54,21 @@
     top: 0;
     left: 0;
 
-    display: block;
+    /* display: block; */
     margin-left: auto;
     margin-right: auto;
+    display: flex;
 }
 .slick-track:before,
 .slick-track:after
 {
-    display: table;
+    /* display: table; */
 
-    content: '';
+    /* content: ''; */
 }
 .slick-track:after
 {
-    clear: both;
+    /* clear: both; */
 }
 .slick-loading .slick-track
 {
@@ -77,11 +78,16 @@
 .slick-slide
 {
     display: none;
-    float: left;
+    /* float: left; */
 
-    height: 100%;
+    /* height: 100%; */
     min-height: 1px;
 }
+
+.slick-slide > div{
+    height: 100%;
+}
+
 [dir='rtl'] .slick-slide
 {
     float: right;
