Googleタグを追加しました。応募フォームのリンクをLINEに変更しました。

--- a/src/assets/css/common/animation.css
+++ b/src/assets/css/common/animation.css
@@ -902,6 +902,7 @@
     /* Flow内のバナーのみ */
     #flow .marker-text:after {
       background: #fff;
+      transition: all 0.5s;
     }
 
     #flow .marker-text.isActive {
