--- a/src/assets/css/schedule.css
+++ b/src/assets/css/schedule.css
@@ -118,7 +118,7 @@
 	left:10px;
 	top:15px;
 	width:3px;/*線の太さ*/
-	height:0;/*はじめは高さを0に*/
+	height:100%;/*はじめは高さを0に*/
 	/* background: #ccc; */
     /* background-image: radial-gradient(#092f4a 50%, transparent 50%); */
     /* background-repeat: repeat-y; */
