コードの整理をしました。

--- a/src/assets/css/precedent.css
+++ b/src/assets/css/precedent.css
@@ -79,6 +79,7 @@
     line-height: 2.6;
     letter-spacing: 0.06rem;
     margin-top: 60px;   
+    text-align: justify;
 }
 
 /*---------------------------------
