--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -85,6 +85,7 @@
     font-size: 16px;
     line-height: 1.75;
     margin-top: 20px;
+    text-align: justify;
 }
 
 /*---------------------------------
