メールフォームを追加しました。

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -5,7 +5,7 @@ footer{
     align-items: center;
     padding: 90px 0;
     position: relative;
-    background-color: #EBF5FF;
+    background-color: #fff;
 }
 
 footer p{
